<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Play Squad</string>
    <string name="app_logo_placeholder">App logo placeholder</string>
    <string name="loading_text">Loading…</string>
    <string name="login_with">Login with</string>
    <string name="image_placeholder">Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_visibility_placeholder">Toggle Password Visibility</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_picture">Profile photo</string>
    <string name="user_name_placeholder">Cristiano Ronaldo</string>
    <string name="location_placeholder">Brasov</string>
    <string name="sports_placeholder">Football</string>
    <string name="level_placeholder">Amateur</string>
    <string name="availability_placeholder">Available</string>
    <string name="user_level">Amateur</string>
    <string name="user_email">user@mail.com</string>
    <string name="user_name">User Name</string>
    <string name="background_image">Background Image Placeholder</string>
    <string name="background_gradient">background_gradient</string>
    <string name="login_with_google">Login with Google</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="join_community">Join our comunity!</string>
    <string name="username">Username</string>
    <string name="already_have_account">Already have an account? Login!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="seller">Seller</string>
    <string name="profile">Profile</string>
</resources>