<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <!-- Search -->
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <!-- Add -->
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add" />

    <!-- Seller -->
    <item
        android:id="@+id/nav_seller"
        android:icon="@drawable/ic_seller"
        android:title="@string/seller"
        android:visible="false" />

    <!-- Profile -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
