<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/offWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section with Gradient Background -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <!-- Gradient Background -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background_rounded"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/abstractBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/abstract_background"
                android:contentDescription="@string/background_image" />

            <!-- Header Content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="32dp">

                <!-- Profile Image -->
                <FrameLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/circle_background"
                    android:clipToOutline="true">

                    <ImageView
                        android:id="@+id/profileImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/profile_picture"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_default_profile_photo" />
                </FrameLayout>

                <!-- User Name -->
                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- User Email -->
                <TextView
                    android:id="@+id/userEmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </FrameLayout>

        <!-- Everything Inside a Single Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:contentPadding="16dp"
            android:layout_marginTop="-32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- User Level Section -->
                <TextView
                    android:id="@+id/userLevelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="🎈Amateur"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textAlignment="center"/>

                <!-- Liked Sports Section -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Liked Sports"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp" />

                <!-- Horizontal Scroll View for Sports -->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <!-- Individual Sports as Card Elements -->
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            app:cardCornerRadius="16dp"
                            app:cardElevation="4dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp"
                            app:cardBackgroundColor="@color/successColor">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="⚽ Football"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:padding="12dp" />
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            app:cardCornerRadius="16dp"
                            app:cardElevation="4dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="🎾 Tenis"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:padding="12dp" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </HorizontalScrollView>

                <!-- User Stats Section -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Statistics"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp" />

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/cardNumberTextView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="120"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cardLabelTextView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Games Played"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/cardNumberTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="88%"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cardLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Win rate"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Edit Profile Button -->
        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:contentPadding="16dp"
            android:layout_marginTop="32dp"
            android:text="Edit Profile"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
